# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../config.gni")
import("animation/animation.gni")

gfx_public_headers = [ "gfx_export.h" ] + gfx_animation_headers

gfx_source_files = gfx_animation_sources

gfx_builds_shared_library = (is_android || is_harmony) && !is_headless

gfx_public_deps = [ "../base/src:base_log_headers" ]

config("gfx_public_config") {
  include_dirs = [ ".." ]
}

config("gfx_no_export_config") {
  defines = [ "GFX_NO_EXPORT" ]
}

source_set("gfx_headers") {
  sources = gfx_public_headers
  public_configs = [ ":gfx_public_config" ]
  public_deps = gfx_public_deps
}

source_set("gfx_sources") {
  visibility = [ "*" ]
  sources = gfx_public_headers + gfx_source_files
  public_configs = [ ":gfx_public_config" ]
  public_deps = gfx_public_deps
  if (!gfx_builds_shared_library) {
    public_configs += [ ":gfx_no_export_config" ]
  }
}

if (gfx_builds_shared_library) {
  group("gfx") {
    public_deps = [ ":gfx_headers" ]
  }
} else {
  group("gfx") {
    public_deps = [ ":gfx_sources" ]
  }
}
