# Copyright 2026 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../config.gni")

assert(is_harmony)

shared_library("lynx_gfx") {
  output_name = "lynxgfx"

  deps = [
    "../../:gfx_sources",
    "../../../base/platform/harmony:lynx_base",
  ]

  configs += [ "../../../platform/harmony/lynx_harmony:harmony_public_config" ]
}
