# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("../../../../../common/config.gni")

source_set("codec") {
  sources = [
    "desktop_image.cc",
    "desktop_image.h",
    "image_fetcher_desktop.cc",
    "image_fetcher_desktop.h",
  ]

  public_configs = [ "../../../../../../clay:config" ]

  defines = [ "BASE_NO_EXPORT" ]
}
