# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
import("../../../../../common/config.gni")

source_set("svg") {
  sources = [ "svg_dom_stub.cc" ]

  public_configs = [ "../../../../../../clay:config" ]

  defines = [ "BASE_NO_EXPORT" ]
}
